# roland

./: .appveyor.yml  .clang-format  .codeclimate.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README-DE.md  README.md  appveyor.yml  changelog.sh  cmake.sh  config.h.in  format.sh  make.sh  roland-linux.cfg  roland.spec  tab2space.sh
assets/: config.h.in  doxyfile.in  gen_changelog.sh  roland.desktop
assets/app/: mkicon.py
assets/cmake/: CompilerSpec.cmake  compspec.h.in
assets/disks/: 000--Empty.dsk  000--Logo3.dsk  Arkanoi4.dsk  CPM Plus (G) (1985) (Disk 1 of 3) [a2].dsk  CPM Plus (G) (1985) (Disk 2 of 3) [a2].dsk  CPM Plus (G) (1985) (Disk 3 of 3) [a2].dsk  Demo6128.dsk  GrBeret.dsk  PingPong.dsk  RolanTim.dsk  StoleMill.dsk  WiGamesB.dsk  prehisto.dsk
assets/dox/: 8255.dox  Amstrad-CPC-Mode0.eot  Amstrad-CPC-Mode1.eot  Amstrad-CPC-Mode2.eot  crtc.dox  gatearray.dox  gatearray.html  inconsolata-bold.eot  inconsolata-regular.eot  mainpage.dox  roland.css  roland_header.html  roland_header_naked.html  roland_naked.css
disks/: Arkanoi5.dsk  ArtStud.dsk  BJack2.dsk  Back to the Future 3 (UK) (1990) (Disk 2 of 2).dsk  Bounder.dsk  Commando.dsk  Feud (UK) (1987).dsk  Gyroscop.dsk  Hobbit.dsk  Spindizy.dsk  WiGamesA.dsk
files/: config.h.in  doxyfile.in  roland.spec.in
files/disks/: Apprenti.dsk  BJack1.dsk  Back to the Future 3 (UK) (1990) (Disk 1 of 2).dsk  Darts180.dsk  EliteD.dsk  Ghostbus.dsk  HarveyH.dsk  ImpMiss1.dsk  ImpMiss2.dsk  Predator.dsk  Prehist2.dsk  SorcerPl.dsk  WerneEDA.dsk  WerneEDB.dsk  sorcery.dsk
files/dox/: 8255.dox  8255.html  8255.txt  crtc.dox  crtc.html  mainpage.dox
files/sdl-vc2015/lib/x86/: SDL.lib  SDL_image.lib  SDL_mixer.lib  SDLmain.lib
src/: .gitignore  CMakeLists.txt  def.h  icon.h  predef.h  roland.cpp  types.h
src/common/: CMakeLists.txt  prefs.cpp  prefs.h
src/common/filesys/: CMakeLists.txt  directory.cpp  directory.h  fileinfo.cpp  fileinfo.h  filename.cpp  filename.h
src/cpc/: CMakeLists.txt  colours.cpp  colours.h  cpc.cpp  cpc.h  cpckeys.h  crtc.cpp  crtc.h  gatearray.cpp  gatearray.h  keyboard.cpp  keyboard.h  memman.cpp  memman.h  ppi.cpp  ppi.h  psg.cpp  psg.h  sound.cpp  sound.h  vdu.cpp  vdu.h
src/cpc/floppy/: CMakeLists.txt  cmdtable.cpp  cmdtable.h  cmdtabledef.cpp  cmdtabledef.h  drive.cpp  drive.h  fdc.cpp  fdc.h  fdcconst.h  sector.cpp  sector.h  track.cpp  track.h
src/cpc/raze/: raze.asm.in  raze.h  raze.html  raze.inc  raze.reg
src/cpc/z80/: CMakeLists.txt  macros.h  register.h  z80.cpp  z80.h
src/opt/: mmx_memcpy.asm.in  mmx_memcpy.h
src/sdl/: CMakeLists.txt  audio.cpp  audio.h  border.cpp  border.h  button.cpp  button.h  canvas.cpp  canvas.h  canvasgl.cpp  canvasgl.h  canvasstd.cpp  canvasstd.h  clock.h  color.cpp  color.h  draw.cpp  draw.h  drawgl.cpp  drawgl.h  drawstd.cpp  drawstd.h  exception.cpp  exception.h  filelist.cpp  filelist.h  filelistitem.cpp  filelistitem.h  fileselect.cpp  fileselect.h  glfunclist.h  glfuncs.cpp  glfuncs.h  gui.cpp  gui.h  image.cpp  image.h  imagefont.cpp  imagefont.h  keytrans.cpp  (+21 more)
src/sdl/gui/: CMakeLists.txt  fileselect.cpp  fileselect.h
src/sdl/gui/font/: CMakeLists.txt  bitfont.cpp  bitfont.h  bitglyph.cpp  bitglyph.h  font.cpp  font.h  glyphs.cpp
src/sdltk/: CMakeLists.txt  audio.cpp  audio.h  border.cpp  border.h  button.cpp  button.h  canvas.cpp  canvas.h  canvasgl.cpp  canvasgl.h  canvasstd.cpp  canvasstd.h  clock.h  color.cpp  color.h  events.h  exception.cpp  exception.h  filelist.cpp  filelist.h  filelistitem.cpp  filelistitem.h  glfunclist.h  glfuncs.cpp  gui.cpp  gui.h  image.cpp  image.h  imagefont.cpp  imagefont.h  keytrans.cpp  keytrans.h  label.cpp  label.h  list.cpp  list.h  listitem.cpp  listitem.h  pixel.h  (+12 more)
